2002-12-05  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.[mh]: Added method named
	-[GormDocument renameConnectionsForClassNamed:toName:]
	to rename the object in the object editor so that the
	connections stay in sync w/ the new name.
	* Gorm.m/GormPrivate.h: Added -[GormObjectProxy setClassName:]
	
2002-12-04  Adam Fedor  <fedor@gnu.org>

	* Version: 0.2.0
	* Gorm.m: Change font panel shortcut to t

2002-12-02  Adam Fedor  <fedor@gnu.org>

	* GModelDecoder.m ([GormDocument -connectionObjectForObject:]): 
	Return nil if object is nil.

2002-11-29  Gregory John Casamento <greg_casamento@yahoo.com>
	
	* NOTE: Added a patch submitted by Fabien Vallon to 
	add tab view inspector.  Thanks.
	* Palettes/3Containers/GormTabViewInspector.gorm: added.
	* Palettes/3Containers/inspectors.m: Patched.
	* Palettes/3Containers/GNUmakefile: Patched.	

2002-11-24  Gregory John Casamento  <greg_casamento@yahoo.com>

	* NOTE: Added a patch submitted by Fabien Vallon to 
	add functionality to the combo box inspector.  Thanks.
	* Palettes/4Data/GormNSComboBoxInspector.gorm: added.
	* Palettes/4Data/inspectors.m: Patched.	
	
2002-11-24  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Gorm.m: -[GormObjectProxy classInspectorClassName]
	added code to return @"GormNotApplicableInspector".
	
2002-11-24  Gregory John Casamento  <greg_casamento@yahoo.com>

	* GormFilesOwner.m: -[GormFilesOwner classInspectorClassName]
	implemented to return @"GormNotApplicableInspector".
	* GormDocument.m: -[GormFirstResponder classInspectorClassName]
	same as above.
	
2002-11-23  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Gorm.m: -[GormClassProxy inspectorClassName]:
	changed to return @"GormNotApplicableInspector" so that
	when a user creates a new subclass in the class editor an
	inspector no longer appears which contains "GormClassProxy"
	which is an internal class.

2002-11-23  Gregory John Casamento  <greg_casamento@yahoo.com>
